css/styles.css
/* DEVICES Bootstrap 4
@media (max-width: 575px) {
}

@media (min-width: 576px) {
}

@media (min-width: 768px) {
}

@media (min-width: 992px) {
}

@media (min-width: 1200px) {
}
*/

/* DEVICES Bootstrap 5.3.3  */
/* // X-Small devices (portrait phones, less than 576px)
// No media query for `xs` since this is the default in Bootstrap

// Small devices (landscape phones, 576px and up)
@media (min-width: 576px) { ... }

// Medium devices (tablets, 768px and up)
@media (min-width: 768px) { ... }

// Large devices (desktops, 992px and up)
@media (min-width: 992px) { ... }

// X-Large devices (large desktops, 1200px and up)
@media (min-width: 1200px) { ... }

// XX-Large devices (larger desktops, 1400px and up)
@media (min-width: 1400px) { ... } */



/* html body
-------------------------------------------------- */
html {
    position: relative;
    min-height: 100%;
  }
  
body {
  position: relative;
  max-width: 100%;
  height: 100%;
  overflow-x: hidden !important;
  overflow-y: scroll;
}

/* html, body {
  max-width: 100%;
  overflow-x: hidden;
} */

/* reset browser defaults */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

  
  /* section {
    overflow-x: hidden;
    overflow-y: hidden;
  } */

